--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 			<aside class="menu-lateral">
 				<ul>
 					<li>
-						<a href="#" target="_blank">
+						<a href="https://github.com/mariadxavier" target="_blank">
 							<img src="./src/imagens/github.svg" alt="ícone GitHub" class="icone" />
 						</a>
 					</li>
 					<li>
-						<a href="#" target="_blank">
+						<a href="https://www.linkedin.com/in/maria-eduarda-xavier-vidigal-aa9997220/" target="_blank">
 							<img src="./src/imagens/linkedin-in.svg" alt="ícone LinkedIn" class="icone" />
 						</a>
 					</li>
